Implemented complete deactivation for departments ,roles and categories