@@ -1,97 +1,40 @@
 package com.example.helpdesk.service.impl;
 
 import java.util.List;
-import java.util.stream.Collectors;
-
-import org.springframework.stereotype.Service;
 import org.springframework.data.domain.Page;
 import org.springframework.data.domain.Pageable;
-
+import org.springframework.stereotype.Service;
 import com.example.helpdesk.dto.TicketCategoryCreateDTO;
 import com.example.helpdesk.dto.TicketCategoryResponseDTO;
+import com.example.helpdesk.exception.ConflictException;
+import com.example.helpdesk.exception.ResourceNotFoundException;
 import com.example.helpdesk.model.TicketCategory;
 import com.example.helpdesk.repository.TicketCategoryRepository;
 import com.example.helpdesk.service.TicketCategoryService;
-import com.example.helpdesk.exception.ResourceNotFoundException;
-import com.example.helpdesk.exception.ConflictException;
-
 
 @Service
 public class TicketCategoryServiceImpl implements TicketCategoryService {
-
     private final TicketCategoryRepository categoryRepository;
-
-    public TicketCategoryServiceImpl(TicketCategoryRepository categoryRepository) {
-        this.categoryRepository = categoryRepository;
-    }
-
-    @Override
-    public TicketCategoryResponseDTO createCategory(TicketCategoryCreateDTO dto) {
-
-        if (categoryRepository.findByNameIgnoreCase(dto.getName()).isPresent())
-            throw new ConflictException("A ticket category with this name already exists.");
-
+    public TicketCategoryServiceImpl(TicketCategoryRepository categoryRepository) { this.categoryRepository = categoryRepository; }
+    @Override public TicketCategoryResponseDTO createCategory(TicketCategoryCreateDTO dto) {
+        if (categoryRepository.findByNameIgnoreCase(dto.getName()).isPresent()) throw new ConflictException("A ticket category with this name already exists.");
         TicketCategory category = new TicketCategory();
-
-        category.setName(dto.getName());
-        category.setDescription(dto.getDescription());
-
-        TicketCategory savedCategory = categoryRepository.save(category);
-
-        return new TicketCategoryResponseDTO(
-                savedCategory.getId(),
-                savedCategory.getName(),
-                savedCategory.getDescription()
-        );
+        category.setName(dto.getName()); category.setDescription(dto.getDescription()); category.setActive(true);
+        return map(categoryRepository.save(category));
     }
-
-    @Override
-    public List<TicketCategoryResponseDTO> getAllCategories() {
-
-        return categoryRepository.findAll()
-                .stream()
-                .map(category -> new TicketCategoryResponseDTO(
-                        category.getId(),
-                        category.getName(),
-                        category.getDescription()))
-                .collect(Collectors.toList());
+    @Override public List<TicketCategoryResponseDTO> getAllCategories() { return categoryRepository.findAll().stream().map(this::map).toList(); }
+    @Override public Page<TicketCategoryResponseDTO> getAllCategories(Pageable pageable) { return categoryRepository.findAll(pageable).map(this::map); }
+    @Override public TicketCategoryResponseDTO getCategoryById(Long id) { return map(find(id)); }
+    @Override public TicketCategoryResponseDTO updateCategory(Long id, TicketCategoryCreateDTO dto) {
+        TicketCategory category = find(id);
+        if (categoryRepository.existsByNameIgnoreCaseAndIdNot(dto.getName(), id)) throw new ConflictException("A ticket category with this name already exists.");
+        category.setName(dto.getName()); category.setDescription(dto.getDescription());
+        return map(categoryRepository.save(category));
     }
-
-    @Override
-    public TicketCategoryResponseDTO getCategoryById(Long id) {
-
-        TicketCategory category = categoryRepository.findById(id)
-                .orElseThrow(() -> new ResourceNotFoundException("Category not found with id: " + id));
-
-        return new TicketCategoryResponseDTO(
-                category.getId(),
-                category.getName(),
-                category.getDescription());
+    @Override public void deleteCategory(Long id) { setActive(id, false); }
+    @Override public TicketCategoryResponseDTO setActive(Long id, boolean active) {
+        TicketCategory category = find(id); category.setActive(active); return map(categoryRepository.save(category));
     }
-
-    @Override
-    public Page<TicketCategoryResponseDTO> getAllCategories(Pageable pageable) {
-        return categoryRepository.findAll(pageable).map(category -> new TicketCategoryResponseDTO(
-                category.getId(), category.getName(), category.getDescription()));
-    }
-
-    @Override
-    public TicketCategoryResponseDTO updateCategory(Long id, TicketCategoryCreateDTO dto) {
-        TicketCategory category = categoryRepository.findById(id)
-                .orElseThrow(() -> new ResourceNotFoundException("Category not found with id: " + id));
-        if (categoryRepository.existsByNameIgnoreCaseAndIdNot(dto.getName(), id))
-            throw new ConflictException("A ticket category with this name already exists.");
-        category.setName(dto.getName());
-        category.setDescription(dto.getDescription());
-        TicketCategory saved = categoryRepository.save(category);
-        return new TicketCategoryResponseDTO(saved.getId(), saved.getName(), saved.getDescription());
-    }
-
-    @Override
-    public void deleteCategory(Long id) {
-
-        TicketCategory category = categoryRepository.findById(id)
-                .orElseThrow(() -> new ResourceNotFoundException("Category not found with id: " + id));
-        categoryRepository.delete(category);
-    }
+    private TicketCategory find(Long id) { return categoryRepository.findById(id).orElseThrow(() -> new ResourceNotFoundException("Category not found with id: " + id)); }
+    private TicketCategoryResponseDTO map(TicketCategory category) { return new TicketCategoryResponseDTO(category.getId(), category.getName(), category.getDescription(), category.isActive()); }
 }
